--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,7 +1,7 @@
 .cards {
   margin: 20px auto 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 .cards__list {
@@ -15,7 +15,12 @@
 }
 
 @media screen and (max-width: 630px) {
+  .cards {
+    padding-bottom: 20px;
+  }
+
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
   }
 }
