--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,3 +5,10 @@
   padding: 60px 0;
   font-size: 16px;
 }
+
+.footer__copyright {
+  margin: 0;
+  line-height: 1;
+  color: #212121;
+  opacity: 70%;
+}
