--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -40,6 +40,7 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  font-weight: 500;
 }
 
 .profile__edit-btn {
@@ -49,6 +50,7 @@
   opacity: 70%;
   padding: 0;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1;
   flex: 0 0 auto;
   align-self: flex-start;
@@ -80,6 +82,7 @@
   background-color: #212121;
   color: #fcf5e5;
   border-radius: 8px;
+  border: none;
   align-self: flex-end;
   flex: 0 0 auto;
   display: flex;
