--- a/blocks/card.css
+++ b/blocks/card.css
@@ -33,15 +33,24 @@
   height: 20px;
   border: none;
   background-color: transparent;
-  opacity: 40%;
+  opacity: 0.4;
   padding: 0;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
+.card__like-btn_active {
+  background-image: url(../images/liked-icon.svg);
+  opacity: 1;
+}
+
 .card__like-btn:hover {
   opacity: 100%;
   cursor: pointer;
+}
+
+.card__like-btn_active:hover {
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 630px) {
