--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   max-height: 445px;
+  position: relative;
 }
 
 .card__image {
@@ -47,10 +48,27 @@
 .card__like-btn:hover {
   opacity: 100%;
   cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
 
 .card__like-btn_active:hover {
   opacity: 0.4;
+}
+
+.card__del-btn {
+  background-image: url(../images/delete-default.svg);
+  top: 10px;
+  right: 10px;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+}
+
+.card__del-btn:hover {
+  background-image: url(../images/delete-hover.svg);
 }
 
 @media screen and (max-width: 630px) {
