--- a/blocks/card.css
+++ b/blocks/card.css
@@ -50,17 +50,15 @@
 }
 
 .card__like-btn:hover {
-  opacity: 100%;
+  opacity: 1;
   cursor: pointer;
-  border: none;
-  background-color: transparent;
 }
 
 .card__like-btn_active:hover {
   opacity: 0.4;
 }
 
-.card__del-btn {
+.card__delete-btn {
   background-image: url(../images/delete-default.svg);
   top: 10px;
   right: 10px;
@@ -69,9 +67,10 @@
   position: absolute;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
-.card__del-btn:hover {
+.card__delete-btn:hover {
   background-image: url(../images/delete-hover.svg);
 }
 
