--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -34,7 +34,7 @@
 .profile__description {
   margin: 0;
   color: #212121;
-  opacity: 70%;
+  opacity: 0.7;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -47,7 +47,7 @@
   margin: auto 0 0;
   border: none;
   background-color: transparent;
-  opacity: 70%;
+  opacity: 0.7;
   padding: 0;
   font-size: 16px;
   font-weight: 500;
@@ -63,7 +63,7 @@
 }
 
 .profile__edit-btn:hover {
-  opacity: 100%;
+  opacity: 1;
   cursor: pointer;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .profile__add-btn:hover {
-  opacity: 80%;
+  opacity: 0.8;
   cursor: pointer;
 }
 
